<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <me.sensingself.sensingsugar.Engine.CameraCropLib.RectView
            android:id="@+id/rect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spponImageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/spoonImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/spoonshap_bk_rect" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/takePhotoTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/take_photo"
                android:textSize="@dimen/ca_take_photo_fontsize" />

            <TextView
                android:id="@+id/takePhotoNoteTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/take_photo_note"
                android:textSize="@dimen/ca_take_photo_note_fontsize" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/takingLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/iv_take"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_take_photo" />

        <ImageView
            android:id="@+id/iv_flash"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/flash_on" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/iv_back" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/preViewStripConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkBrown">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_plat_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/stripPreviewImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/stripCheckingNoteTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/stripCheckingNoteTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_button_margin_bottom"
                android:layout_marginTop="@dimen/login_button_margin_bottom"
                android:gravity="center"
                android:text="@string/please_check_strip"
                android:textColor="@color/colorDarkBrown"
                android:textSize="@dimen/login_mobile_num_title_textview_font_size"
                app:layout_constraintBottom_toTopOf="@+id/retakePhotoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stripPreviewImage" />

            <Button
                android:id="@+id/retakePhotoBtn"
                android:layout_width="@dimen/patient_button_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginBottom="@dimen/city_editText_margin_bottom"
                android:background="@drawable/radius_controller_btn"
                android:text="@string/retake_photo"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ca_take_photo_note_fontsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/proceedBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/proceedBtn"
                android:layout_width="@dimen/patient_button_width"
                android:layout_height="@dimen/login_button_height"
                android:background="@drawable/radius_controller_btn"
                android:text="@string/proceed"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ca_take_photo_note_fontsize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/retakePhotoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/retakePhotoBtn"
                app:layout_constraintTop_toTopOf="@+id/retakePhotoBtn" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>