<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient_bk"
    tools:context="me.sensingself.sensingsugar.Activites.Fragments.TestTab.SeedFragment"
    android:id="@+id/seedTabLayout">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/identify_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorDarkBrown"
            android:textSize="@dimen/navi_title_font_size" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/notePatient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_mobile_num_edittext_margin_start"
            android:layout_marginStart="@dimen/login_mobile_num_edittext_margin_start"
            android:layout_marginTop="@dimen/patient_note_textview_margin_top"
            android:text="@string/note_fill_patient_identify"
            android:textAlignment="center"
            android:textColor="@color/colorBrown"
            android:textSize="@dimen/login_mobile_num_title_textview_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_mode_constraint_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/patientAadhaarEdit"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_mobile_num_edittext_height"
                android:layout_marginEnd="@dimen/login_mobile_num_edittext_margin_start"
                android:layout_marginStart="@dimen/login_mobile_num_edittext_margin_start"
                android:layout_marginTop="@dimen/login_mobile_num_edittext_margin_start"
                android:background="@drawable/radius_controller_textview"
                android:ellipsize="middle"
                android:ems="10"
                android:fadeScrollbars="false"
                android:hint="@string/aadhaar"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="12"
                android:paddingEnd="@dimen/firstname_editText_padding_end"
                android:paddingStart="@dimen/firstname_editText_padding_start"
                android:textColor="@color/editTextColor"
                android:textSize="@dimen/editView_default_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/colorBrown"
                android:textSize="@dimen/login_mobile_num_title_textview_font_size"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumberEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patientAadhaarEdit" />

            <EditText
                android:id="@+id/phoneNumberEdit"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_mobile_num_edittext_height"
                android:layout_marginBottom="@dimen/login_mobile_num_edittext_margin_start"
                android:layout_marginEnd="@dimen/login_mobile_num_edittext_margin_start"
                android:layout_marginStart="@dimen/login_mobile_num_edittext_margin_start"
                android:background="@drawable/radius_controller_textview"
                android:ellipsize="middle"
                android:ems="10"
                android:fadeScrollbars="false"
                android:hint="@string/mobile"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:paddingEnd="@dimen/login_mobile_num_edittext_padding_end"
                android:paddingStart="@dimen/login_mobile_num_edittext_padding_start"
                android:textColor="@color/editTextColor"
                android:textSize="@dimen/editView_default_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/identyPreCCP"
                android:layout_width="@dimen/pre_phone_num_CCP_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pre_phone_num_CCP_margin_start"
                app:ccpDialog_allowSearch="true"
                app:ccpDialog_showCloseIcon="true"
                app:ccpDialog_textColor="@color/editTextColor"
                app:ccp_contentColor="@color/editTextColor"
                app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
                app:ccp_rememberLastSelection="true"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_textSize="@dimen/pre_phone_num_CCP_font_size"
                app:layout_constraintBottom_toBottomOf="@+id/phoneNumberEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phoneNumberEdit" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="@dimen/patient_button_width"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginBottom="@dimen/patient_button_margin_bottom"
            android:background="@drawable/radius_controller_btn"
            android:text="@string/search_btn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_button_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="@dimen/patient_button_width"
            android:layout_height="@dimen/login_button_height"
            android:background="@drawable/radius_controller_btn"
            android:text="@string/add_btn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_button_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/searchBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/searchBtn"
            app:layout_constraintTop_toTopOf="@+id/searchBtn" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
